git url / domain updates

--- a/doc/man/kevacoin-tx.1
+++ b/doc/man/kevacoin-tx.1
@@ -116,9 +116,9 @@ Copyright (C) 2011-2018 The Kevacoin Core developers
 Copyright (C) 2009-2018 The Bitcoin Core developers
 
 Please contribute if you find Kevacoin Core useful. Visit
-<https://kevacoin.org> for further information about the software.
+<https://kevacointeam.org> for further information about the software.
 The source code is available from
-<https://github.com/kevacoin-project/kevacoin>.
+<https://github.com/kevacoin-team/kevacoin>.
 
 This is experimental software.
 Distributed under the MIT software license, see the accompanying file COPYING
